--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red_background">#CC0000</color>
+    <color name="blue_background">#0099CC</color>
+    <color name="green_background">#669900</color>
+    <color name="default_background">#FFBB86FC</color>
 </resources>
